# doTERRA_essential_oils_recos

./: .env.example  .gitignore  .hf-spaces-env  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  EDA.ipynb  HF_SPACES_DEPLOYMENT.md  HF_SPACES_README.md  LANGFUSE_SETUP.md  Makefile  Procfile  README.md  config.py  docker-compose.yaml  generate_and_upload_embeddings.py  ingest_to_qdrant.py  pyproject.toml  render.yaml  requirements.txt  scrape_single.py  signature.txt  ty.toml  vercel.json
.github/workflows/: deploy-to-vercel.yml  precommit.yml  push-to-hf-spaces.yml
backend/: Dockerfile  SYSTEM_PROMPT.md  USER_PROMPT.md  get_product_names.py  main.py  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: OilCard.tsx
plans/: SECURITY_REVIEW.md  development.md
processing/: EDA.ipynb  README.md  doTERRA_extract_from_pip.md  doterra_eu_de_pips.json  doterra_pdf_fetcher.py  essential_oil_schema.py  extract_essential_oil_v2.py  fetch_correct_shop_urls.py  fetch_shop_data_final.py  ingest_to_qdrant.py  merge_shop_data.py  pyproject.toml  run_extract_oils.py  scrape_all.py  serialize.py  serialize_and_datacleaning_prototype_for_reference.ipynb  verify_and_fix_urls.py
processing/scraping_approach/: EDA.ipynb  README.md  ingest_to_qdrant.py  scrape_all.py  scrape_single.py  serialize.py
screenshots/: prompt.txt
