[project]
name = "doTERRA-essential-oils-recos"
version = "0.1.0"
description = "Search and discover dÅTERRA essential oils"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.5.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "langfuse>=3",
    "openai>=2.16.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
