[project]
name = "doterra-preprocessing"
version = "0.1.0"
description = "doTERRA essential oils data preprocessing and ingestion"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-ollama>=1.0.1",
    "onnxruntime>=1.23.2",
    "paddleocr>=3.4.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.2",
]
